--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -76,16 +76,16 @@ darker blue: #005b63
   font-size: 1.3em;
   text-align: center;
   margin-left: 46%;
-  background-color: #ff2468;
-  color: white;
+  /*background-color: #ff2468;*/
+  color: #ff2468;
   float: left;
   margin-top: -11%;
   z-index: 200;
 }
 #learnmore:hover {
-	border: 2px solid white;
-	background-color: white;
-	color: #ff2468;
+	/*border: 2px solid white;*/
+	background-color: #ff2468;
+	color: white;
 	cursor: pointer;
 }
 
@@ -175,23 +175,62 @@ darker blue: #005b63
 	color: #ff2468;
 	padding-bottom: 1%;
 }
-.workpic {
-	display: inline;
-	z-index: 1;
-}
-#work img {
+
+.img-list img {
 	height: 200px;
+	opacity: 0.4;
 	-webkit-filter: grayscale(100%);
-	margin-left: 6%;
-	z-index: 1;
 }
-.description {
-	/*display: none;*/
-	display: inline;
-	margin-left: -10%;
-	z-index: 10;
+ul.img-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
-/*.workpic:hover .description {
+ 
+ul.img-list li {
+  display: inline-block;
+  height: 200;
+  margin: 0 2em 2em 0;
+  position: relative;
+}
+span.text-content {
+  background: rgba(0,0,0,0.5);
+  color: white;
+  cursor: pointer;
+  display: table;
+  height: 200px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  overflow: hidden;
+  opacity: 0;
+  width: 100%;
+}
+span.text-content span {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
+ul.img-list li:hover span.text-content {
+  opacity: 1;
+}
+
+.describe h3 {
+	color: #00a5a6;
 	text-align: center;
-	margin-top: -10%;
-}*/
+}
+.describe {
+	width: 50%;
+	margin-left: 25%;
+}
+
+
+#portfolio {
+	background-color: #00a5a6;
+	width: 100%;
+	padding-top: 2%;
+	margin-left: -1%;
+	padding-left: 1%;
+	padding-bottom: 2%;
+}
