--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,7 @@
 html, body {
 	width: 100%;
 	/* font here */
+	font-family: 'Lato', sans-serif;
 }
 body {
 	margin-bottom: -1%;
@@ -13,6 +14,16 @@ lighter tan: #ffffe3
 lighter blue: #00a5a6
 darker blue: #005b63
  */
+
+.bold {
+	font-weight: 900;
+}
+.italics {
+	font-style: italic;
+}
+.name {
+	font-size: 2.5em;
+}
 
 #nav {
 	margin-left: -1%;
@@ -30,7 +41,7 @@ darker blue: #005b63
 #nav ul li {
 	float: left;
 	/*margin-left: 8%*/
-	margin-left: 7%;
+	margin-left: 5.5%;
 }
 #nav a:link, a:visited {
 	display: block;
