--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -109,9 +109,10 @@ darker blue: #005b63
 	/*background-color: #e0d4b1;*/
 	width: 100%;
 	padding-top: 2%;
-	margin-left: -1%;
+	/*margin-left: -1%;
 	margin-top: -1.3%;
-	padding-left: 1%;
+	padding-left: 1%;*/
+	margin: 0 auto;
 	padding-bottom: 2%;
 }
 #bio p {
