--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -41,7 +41,7 @@ darker blue: #005b63
 #nav ul li {
 	float: left;
 	/*margin-left: 8%*/
-	margin-left: 5.5%;
+	margin-left: 3%;
 }
 #nav a:link, a:visited {
 	display: block;
@@ -106,14 +106,14 @@ darker blue: #005b63
 
 
 #bio {
-	/*background-color: #e0d4b1;*/
+	/*background-color: #ff2468;*/
 	width: 100%;
-	padding-top: 2%;
+	padding-top: 1%;
 	/*margin-left: -1%;
 	margin-top: -1.3%;
 	padding-left: 1%;*/
 	margin: 0 auto;
-	padding-bottom: 2%;
+	padding-bottom: 1%;
 }
 #bio p {
 	width: 45%;
@@ -247,6 +247,56 @@ ul.img-list li:hover span.text-content {
 	display: none;
 }
 
+#portfolioheader {
+	margin-top: 5%;
+	/*background-color: #00a5a6;*/
+	width: 100%;
+	margin-left: -1%;
+	padding-right: 1%;
+	margin-bottom: 2%;
+	padding-top: 0.5%;
+	padding-bottom: 0.5%;
+	/*border: 2px solid #00a5a6;*/
+}
+#portfolioheader h1 {
+	text-align: center;
+	color: #ff2468;
+	/*color: white;*/
+}
+#portfolio {
+	margin: 0;
+	padding: 0;
+	margin-bottom: 7%;
+}
+#portfolio ul {
+	list-style-type: none;
+	width: 70%;
+	margin-left: 20%;
+}
+.projects {
+	/*display: inline;*/
+	margin-bottom: 2%;
+	webkit-transition: margin-bottom 0.5s;
+	transition: margin-bottom 0.5s;
+}
+.projects p {
+	max-width: 60%;
+	float: right;
+	margin-right: 15%;
+}
+.hidden {
+	display: none;
+}
+.content {
+	display: none;
+}
+.show_hide {
+	color: #00a5a6;
+}
+.show_hide:hover {
+	color: #ff2468;
+	cursor: pointer;
+}
 
 #contact {
 	background-color: #00a5a6;
