--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -38,6 +38,10 @@ darker blue: #005b63
 	background-color: #00a5a6;
 	margin-top: -1%;
 	opacity: 0.9;
+	padding-bottom: 2%;
+	padding-top: 2%;
+	display: flex;
+	justify-content: space-around;
 }
 #nav ul {
 	list-style-type: none;
@@ -45,24 +49,30 @@ darker blue: #005b63
     padding: 0;
     overflow: hidden;
     margin-top: 1%;
+    text-align: center;
+    /*margin-left: 18%;*/
+    width: 60%;
+    display: flex;
+	justify-content: space-around;
 }
 #nav ul li {
 	float: left;
 	/*margin-left: 8%*/
-	margin-left: 3%;
+	/*margin-left: 5%;*/
 }
 #nav a:link, a:visited {
 	display: block;
-	width: 150px;
-	padding: 6%;
+	width: 100%;
+	/*padding: 6%;*/
 	text-align: center;
 	font-size: 1.2em;
 	text-decoration: none;
 	color: white;
 }
 #nav a:hover, a:active {
-	background-color: white;
-	color: #00a5a6;
+	/*background-color: white;
+	color: #00a5a6;*/
+	border-bottom: 2px solid white;
 }
 
 
@@ -70,7 +80,7 @@ darker blue: #005b63
 	position: relative;
 	width: 101%;
 	margin-left: -1%;
- 	margin-top: -1.7%;
+ 	margin-top: -3.3%;
 	background: linear-gradient(rgba(255,255,255,0.5),rgba(255,255,255,0.7)), url("../img/cornell.jpg") no-repeat center center fixed;
 	-webkit-background-size: cover;
     -moz-background-size: cover;
@@ -87,21 +97,22 @@ darker blue: #005b63
 	position: relative;
 	/*height: 80px;*/
 }
-#aboutme h1 {
+#aboutme h1{
 	text-align: center;
-	padding-top: 10%;
-	padding-bottom: 9%;
+	padding-top: 6%;
+	padding-bottom: 10%;
 	/*color: #ff2468;*/
 }
+
 #learnmore {
   border: 2px solid #ff2468;
   font-size: 1.3em;
   text-align: center;
-  margin-left: 46%;
+  margin-left: 44%;
   /*background-color: #ff2468;*/
   color: #ff2468;
   float: left;
-  margin-top: -11%;
+  margin-top: -10%;
   z-index: 200;
   transition: all 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
   webkit-transition: all 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -264,6 +275,9 @@ ul.img-list li:hover span.text-content {
 #is, #ean {
 	display: none;
 }
+.jobindent {
+	line-height: 1.3;
+}
 
 #portfolioheader {
 	margin-top: 5%;
@@ -332,22 +346,19 @@ ul.img-list li:hover span.text-content {
 	padding-left: 1%;
 	text-align: center;
 	color: white;
+	display: flex;
 }
-#email {
-	float: left;
-	margin-top: 2.5%;
-	margin-left: 36%;
-}
-#phone {
-	float: left;
-	clear: both;
-	margin-left: 36%;
-	/*margin-top: 0.5%;*/
+#contact #info {
+	margin: auto;
+	width: 60%;
 }
 #contact img {
 	width: 40px;
-	padding: 1%;
+	padding: 2%;
+	margin: auto;
 }
-#fb {
-	margin-left: -30%;
+#specific {
+	vertical-align: 33px;
+	padding-left: 2%;
+	padding-right: 2%;
 }
