--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,6 +5,7 @@ html, body {
 }
 body {
 	margin-bottom: -1%;
+	color: #222222;
 }
 
 /* colors!
@@ -300,7 +301,7 @@ ul.img-list li:hover span.text-content {
 #portfolio ul {
 	list-style-type: none;
 	width: 70%;
-	margin-left: 20%;
+	margin-left: 23%;
 }
 .projects {
 	/*display: inline;*/
@@ -358,4 +359,237 @@ ul.img-list li:hover span.text-content {
 	vertical-align: 33px;
 	padding-left: 2%;
 	padding-right: 2%;
+}
+
+#portfolio {
+	/*padding-bottom: 18%;*/
+}
+
+
+
+.entry { 
+    position:relative; 
+    float:left; 
+    margin-right:20px; 
+    margin-bottom:20px; 
+    cursor:pointer; 
+  
+    /*padding:10px;*/ 
+    width:272px; 
+  
+    /*-webkit-border-radius:5px; 
+    -moz-border-radius:5px; 
+    border-radius:5px; */
+  
+   /* -webkit-box-shadow:0 0 7px rgba(0, 165, 166, 0.05); 
+    -moz-box-shadow:0 0 7px rgba(0, 165, 166, 0.05); 
+    box-shadow:0 0 7px rgba(0, 165, 166, 0.05); */
+}
+.portfolio { 
+	width: 80%;
+	margin-left: 10%;
+	margin-right:-20px; 
+}
+.portfolio a {
+	color: #222222;
+	text-decoration: none;
+}
+
+.hover { 
+	background:rgba(0,0,0,.7) url(../images/hover.png) no-repeat center; 
+    position:absolute; 
+    top:0px; 
+    left:0px; 
+    bottom:0px; 
+    right:0px; 
+    opacity:0; 
+    bottom: 26px;
+    -webkit-transition:all .3s ease-in-out; 
+    -moz-transition:all .3s ease-in-out; 
+    -ms-transition:all .3s ease-in-out; 
+    -o-transition:all .3s ease-in-out; 
+    transition:all .3s ease-in-out; 
+} 
+figcaption {
+	text-align: center;
+}
+.entry:hover .hover { 
+	opacity:1; 
+}
+.entry:hover figcaption {
+	padding-top: 14px;
+	font-size: 1.2em;
+	/*color: #00a5a6;*/
+	-webkit-transition:all .3s ease-in-out; 
+    -moz-transition:all .3s ease-in-out; 
+    -ms-transition:all .3s ease-in-out; 
+    -o-transition:all .3s ease-in-out; 
+    transition:all .3s ease-in-out; 
+}
+figure {
+	overflow: hidden;
+}
+.entry:hover img {
+	 -moz-transform: scale(1.2);
+  	-webkit-transform: scale(1.2);
+  	transform: scale(1.1);
+  	-webkit-transition:all .3s ease-in-out; 
+    -moz-transition:all .3s ease-in-out; 
+    -ms-transition:all .3s ease-in-out; 
+    -o-transition:all .3s ease-in-out; 
+    transition:all .3s ease-in-out; 
+}
+nav.primary ul li a { 
+    display:inline; 
+    color:black; 
+    /*text-indent:20px; */
+    text-decoration:none; 
+    /*line-height:39px; */
+} 
+nav.primary ul li a:hover { 
+    color:#00a5a6; 
+    text-decoration: underline;
+}
+nav li {
+	display: inline;
+	margin-right: 2%;
+	font-size: 1.1em;
+}
+nav.primary ul li a:active, nav.primary ul li a.selected {
+	color:#00a5a6; 
+    text-decoration: underline;
+}
+.isotope-item { 
+  z-index: 2; 
+} 
+  
+.isotope-hidden.isotope-item { 
+  pointer-events: none; 
+  z-index: 1; 
+} 
+  
+.isotope, 
+.isotope .isotope-item { 
+-webkit-transition-duration: 0.8s; 
+   -moz-transition-duration: 0.8s; 
+        transition-duration: 0.8s; 
+} 
+  
+.isotope { 
+-webkit-transition-property: height, width; 
+   -moz-transition-property: height, width; 
+        transition-property: height, width; 
+} 
+  
+.isotope .isotope-item { 
+-webkit-transition-property: -webkit-transform, opacity; 
+   -moz-transition-property:    -moz-transform, opacity; 
+        transition-property:         transform, opacity; 
+}
+.primary {
+	margin-top: -2%;
+    padding-bottom: 2%;
+}
+
+
+
+#projecttitle {
+	width: 101%;
+	padding-top: 5%;
+	margin-left: -1%;
+	margin-top: -2%;
+	/*margin-top: 5%;*/
+	padding-bottom: 1%;
+	background-color: rgba(0,165,166,0.40);
+}
+#projecttitle img {
+	opacity: 0.25;
+	-webkit-filter: grayscale(100%);
+	margin-top: -3%;
+	margin-left: -1%;
+	width: 101%;
+}
+#summary {
+	background-color: rgba(0,165,166,0.20);
+	margin-top: -1.35%;
+    margin-left: -1%;
+}
+#summary p {
+	width: 58%;
+	margin-left: 21%;
+	padding-bottom: 4%;
+	padding-top: 4%;
+	font-size: 1.1em;
+	/*text-align: center;*/
+	line-height: 1.35;
+	color: rgba(34, 34, 34, 0.64);
+}
+#projecttitle h1 {
+	margin-left: 21%;
+	/*color: #00a5a6;*/
+	color: hsla(180,70%,33%,1);
+	/*color: hsla(341,40%,57%,1);*/
+	padding: 0;
+	text-align: left;
+	margin-top: 3%;
+	font-size: 2.7em;
+}
+#projecttitle h3 {
+	margin-left: 21%;
+	color: hsla(180,70%,33%,1);
+	margin-top: -1%;
+	padding-bottom: 1%;
+}
+#projecttitle hr {
+	border: 2px solid rgba(0,165,166,0.20);;
+	width: 7%;
+	margin-left: 21%;
+	margin-top: -2%;
+	margin-bottom: 2%;
+}
+#portfoliodescription h2, #portfoliodescription h3, #portfoliodescription p {
+	margin-left: 21%;
+	width: 58%;
+}
+#portfoliodescription h2 {
+	color: #ff2468;
+}
+#portfoliodescription p {
+	line-height: 1.3em;
+}
+#portfoliodescription img {
+	width: 40%;
+	box-shadow: 3px 3px 1px #ccc;
+  -webkit-box-shadow: 3px 3px 1px #ccc;
+  -moz-box-shadow: 3px 3px 1px #ccc;
+	vertical-align: top;	
+}
+#portfoliodescription video {
+	width: 94%;
+	box-shadow: 3px 3px 1px #ccc;
+  -webkit-box-shadow: 3px 3px 1px #ccc;
+  -moz-box-shadow: 3px 3px 1px #ccc;
+}
+.padding_link {
+	padding: 3%;
+}
+#portfoliodescription a {
+	color: #00a5a6!important;
+	cursor: pointer;
+}
+#portfoliodescription a:hover {
+	color: #ff2468!important;
+}
+#summary a {
+	color: #00a5a6!important;
+	cursor: pointer;
+}
+#summary a:hover {
+	color: #ff2468!important;
+}
+#portfoliodescription {
+	padding-bottom: 5%;
+}
+#portfoliodescription {
+	padding-top: 0.5%;
 }
