--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -541,7 +541,7 @@ nav.primary ul li a:active, nav.primary ul li a.selected {
 	padding-bottom: 1%;
 }
 #projecttitle hr {
-	border: 2px solid rgba(0,165,166,0.20);;
+	border: 2px solid rgba(0,165,166,0.20);
 	width: 7%;
 	margin-left: 21%;
 	margin-top: -2%;
