--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -593,3 +593,6 @@ nav.primary ul li a:active, nav.primary ul li a.selected {
 #portfoliodescription {
 	padding-top: 0.5%;
 }
+.bigger {
+	font-size: 1.3em;
+}
